LPS-56580 Regenerate language properties

--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_pl.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_pl.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Dodaj profil kontroli dostępu do usługi (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Dozwolone podpisy usługi (Automatic Translation)
-allowed-service-signatures-help=Wprowadzić każdy usługę dozwolone podpisy oddzielonych nową linię. Dla example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Profil kontroli dostępu do usługi (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Profil kontroli dostępu do usługi (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Profil kontrola dostępu usługi (Automatic Translation)
-new-service-access-control-profile=Nowy profil kontroli dostępu do usługi (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Wprowadź nazwę profilu unikalną usługę kontroli dostępu. (Automatic Translation)
-service-access-control-profile-name-is-required=Nazwa profilu kontroli dostępu do usługi jest wymagane. (Automatic Translation)
-service-access-control-profile-title-is-required=Usługa dostępu do kontroli profil tytuł jest wymagany. (Automatic Translation)
-there-are-no-service-access-control-profiles=Istnieją nie profile kontroli dostępu do usługi. (Automatic Translation)
+allowed-service-signatures-help=Wprowadzić każdy usługę dozwolone podpisy oddzielonych nową linię. Dla example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=To pole jest wymagane i tylko musi zawierać następujące znaki: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
