--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ca.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ca.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Afegir el perfil de Control d'accés de servei (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Permès servei Signatures (Automatic Translation)
-allowed-service-signatures-help=Escriviu cada signatures permesos servei separats per una línia nova. Per a example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Perfil de Control d'accés de servei (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Perfil de Control d'accés de servei (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Servei accés Control perfil d'entrada (Automatic Translation)
-new-service-access-control-profile=Nou perfil d'accés servei Control (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Si us plau, introduïu un nom del perfil servei únic accés control. (Automatic Translation)
-service-access-control-profile-name-is-required=Nom de perfil de control d'accés servei és necessari. (Automatic Translation)
-service-access-control-profile-title-is-required=Servei d'accés control perfil títol és obligatori. (Automatic Translation)
-there-are-no-service-access-control-profiles=Hi ha cap servei accés control perfils. (Automatic Translation)
+allowed-service-signatures-help=Escriviu cada signatures permesos servei separats per una línia nova. Per a example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Aquest camp és obligatori i ha de contenir només caràcters següents: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
