--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_cs.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_cs.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Přidat profil řízení přístupu služby (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Povolené služby podpisů (Automatic Translation)
-allowed-service-signatures-help=Zadejte každou povolenou službu podpisy oddělených znakem nového řádku. Pro example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Profil řízení přístupu služby (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Profil řízení přístupu služby (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Položka profilu řízení přístupu služby (Automatic Translation)
-new-service-access-control-profile=Nový profil řízení přístupu služby (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Zadejte název profilu kontroly přístupu jedinečnou službu. (Automatic Translation)
-service-access-control-profile-name-is-required=Název profilu řízení přístupu služby je vyžadováno. (Automatic Translation)
-service-access-control-profile-title-is-required=Název profilu řízení přístupu služby je vyžadováno. (Automatic Translation)
-there-are-no-service-access-control-profiles=Neexistují žádné profily řízení přístupu služby. (Automatic Translation)
+allowed-service-signatures-help=Zadejte každou povolenou službu podpisy oddělených znakem nového řádku. Pro example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Toto pole je požadováno a musí obsahovat pouze následující znaky: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
