--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_da.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_da.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Tilføje Service adgang kontrol profil (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Tilladt Service signaturer (Automatic Translation)
-allowed-service-signatures-help=Angiv hver tilladte service signaturer adskilt af en ny linje. For example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Tjenesteprofilen adgang kontrol (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Tjenesteprofilen adgang kontrol (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Service profil adgangskontrolpost (Automatic Translation)
-new-service-access-control-profile=Ny tjenesteprofil adgang kontrol (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Angiv en unik service adgang kontrol profilnavn. (Automatic Translation)
-service-access-control-profile-name-is-required=Tjenesten adgang kontrol Profilnavn er påkrævet. (Automatic Translation)
-service-access-control-profile-title-is-required=Tjenesten adgang kontrol profil titel er påkrævet. (Automatic Translation)
-there-are-no-service-access-control-profiles=Der er ingen service adgang kontrol profiler. (Automatic Translation)
+allowed-service-signatures-help=Angiv hver tilladte service signaturer adskilt af en ny linje. For example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Dette felt er påkrævet og skal kun indeholde følgende tegn: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
