--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_el.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_el.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Προσθέστε την υπηρεσία πρόσβασης ελέγχου προφίλ (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Επιτρέπεται η υπηρεσία υπογραφές (Automatic Translation)
-allowed-service-signatures-help=Εισάγετε κάθε υπηρεσία επιτρεπόμενων υπογραφές που χωρίζονται από μια νέα γραμμή. Για example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Προφίλ ελέγχου πρόσβασης υπηρεσίας (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Προφίλ ελέγχου πρόσβασης υπηρεσίας (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Καταχώρηση προφίλ ελέγχου πρόσβασης υπηρεσίας (Automatic Translation)
-new-service-access-control-profile=Νέο προφίλ ελέγχου πρόσβασης υπηρεσίας (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Παρακαλούμε εισάγετε μια μοναδική υπηρεσία πρόσβασης ελέγχου όνομα προφίλ. (Automatic Translation)
-service-access-control-profile-name-is-required=Απαιτείται όνομα προφίλ ελέγχου πρόσβασης υπηρεσίας. (Automatic Translation)
-service-access-control-profile-title-is-required=Υπηρεσία ελέγχου πρόσβασης προφίλ τίτλος είναι απαραίτητη. (Automatic Translation)
-there-are-no-service-access-control-profiles=Δεν υπάρχουν κανένα προφίλ ελέγχου πρόσβασης υπηρεσίας. (Automatic Translation)
+allowed-service-signatures-help=Εισάγετε κάθε υπηρεσία επιτρεπόμενων υπογραφές που χωρίζονται από μια νέα γραμμή. Για example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Αυτό το πεδίο απαιτείται και μόνο πρέπει να περιέχουν τους ακόλουθους χαρακτήρες: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
