--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_et.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_et.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Lisa teenus Access Control profiil (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Lubatud teenus allkirjad (Automatic Translation)
-allowed-service-signatures-help=Sisestage iga lubatud teenus allkirju uue joonega eraldatud. Kohta example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Teenuse Access Control profiil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Teenuse Access Control profiil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Teenuse Access Control profiili kanne (Automatic Translation)
-new-service-access-control-profile=Uue teenuse Access Control profiil (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Sisestage unikaalne teenus access control profiilinimi. (Automatic Translation)
-service-access-control-profile-name-is-required=Teenuse access control profiili nimi on nõutav. (Automatic Translation)
-service-access-control-profile-title-is-required=Teenuse access control profiili tiitel on nõutav. (Automatic Translation)
-there-are-no-service-access-control-profiles=Puuduvad teenuse access control profiilid. (Automatic Translation)
+allowed-service-signatures-help=Sisestage iga lubatud teenus allkirju uue joonega eraldatud. Kohta example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=See väli peab ja tohib sisaldada ainult järgmisi märke: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
