--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_fr.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_fr.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Ajouter profil Service de contrôle d'accès (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Permis de Service de Signatures (Automatic Translation)
-allowed-service-signatures-help=Entrez chaque signatures autorisées service séparé par une ligne nouvelle. Pour example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Profil de contrôle d'accès Service (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Profil de contrôle d'accès Service (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Service Access Control Entry de profil (Automatic Translation)
-new-service-access-control-profile=Nouveau profil de contrôle d'accès Service (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Veuillez entrer un nom de profil de service unique accès contrôle. (Automatic Translation)
-service-access-control-profile-name-is-required=Nom de profil de service accès contrôle est requis. (Automatic Translation)
-service-access-control-profile-title-is-required=Titre de profil de service accès contrôle est requis. (Automatic Translation)
-there-are-no-service-access-control-profiles=Il n'y a aucun profil de contrôle accès service. (Automatic Translation)
+allowed-service-signatures-help=Entrez chaque signatures autorisées service séparé par une ligne nouvelle. Pour example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Ce champ est obligatoire et doit contenir uniquement les caractères suivants : 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
