--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_in.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_in.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Tambahkan profil layanan akses kontrol (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Diperbolehkan Layanan tanda tangan (Automatic Translation)
-allowed-service-signatures-help=Masukkan tanda tangan Layanan diperbolehkan masing-masing dipisahkan oleh baris baru. Untuk example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Layanan akses kontrol profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Layanan akses kontrol profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Layanan akses kontrol profil entri (Automatic Translation)
-new-service-access-control-profile=Profil layanan akses kontrol (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Silahkan masukkan nama profil kontrol akses layanan unik. (Automatic Translation)
-service-access-control-profile-name-is-required=Nama profil layanan akses kontrol diperlukan. (Automatic Translation)
-service-access-control-profile-title-is-required=Layanan akses kontrol profil judul diperlukan. (Automatic Translation)
-there-are-no-service-access-control-profiles=Ada tidak ada layanan akses kontrol profil. (Automatic Translation)
+allowed-service-signatures-help=Masukkan tanda tangan Layanan diperbolehkan masing-masing dipisahkan oleh baris baru. Untuk example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Bidang ini diperlukan dan hanya harus berisi karakter berikut: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
