--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_iw.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_iw.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=להוסיף פרופיל בקרת גישה השירות (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=מותר שירות חתימות (Automatic Translation)
-allowed-service-signatures-help=הזן כל חתימות השירות המותרים כשהם מופרדים באמצעות קו חדש. עבור example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=פרופיל בקרת גישה השירות (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=פרופיל בקרת גישה השירות (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=ערך פרופיל של בקרת גישה שירות (Automatic Translation)
-new-service-access-control-profile=פרופיל בקרת גישה של השירות החדש (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=אנא הזן שם פרופיל שירות ייחודי בקרת גישה. (Automatic Translation)
-service-access-control-profile-name-is-required=שם פרופיל של בקרת גישה השירות נדרש. (Automatic Translation)
-service-access-control-profile-title-is-required=שירות גישה שליטה פרופיל כותרת זו נדרשת. (Automatic Translation)
-there-are-no-service-access-control-profiles=ישנם פרופילים בקרת גישה אין שירות. (Automatic Translation)
+allowed-service-signatures-help=הזן כל חתימות השירות המותרים כשהם מופרדים באמצעות קו חדש. עבור example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=שדה זה נדרש, רק להכיל את התווים הבאים: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
