--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_sv.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_sv.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=Lägga till Service Access Control Profile (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Tillåtna Service signaturer (Automatic Translation)
-allowed-service-signatures-help=Ange varje tillåten service signaturer åtskilda av en ny rad. För example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Service Access Control Profile (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Service Access Control Profile (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Tjänsten åtkomstkontrollpost profil (Automatic Translation)
-new-service-access-control-profile=Nya Service Access Control Profile (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Ange en unik service tillgång kontroll Profilnamn. (Automatic Translation)
-service-access-control-profile-name-is-required=Service tillgång kontroll Profilnamn krävs. (Automatic Translation)
-service-access-control-profile-title-is-required=Service tillgång kontroll profil avdelning krävs. (Automatic Translation)
-there-are-no-service-access-control-profiles=Det finns ingen tjänstprofiler tillgång kontroll. (Automatic Translation)
+allowed-service-signatures-help=Ange varje tillåten service signaturer åtskilda av en ny rad. För example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Detta fält är obligatoriska och får bara innehålla följande tecken: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
