--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_zh_CN.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_zh_CN.properties
@@ -1,12 +1,14 @@
-action.ADD_SACP_ENTRY=添加服务访问控制配置文件 (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=允许服务签名 (Automatic Translation)
-allowed-service-signatures-help=请输入一个新行分隔每个允许的服务签名。为 example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=服务访问控制配置文件 (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=服务访问控制配置文件 (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=服务访问控制配置文件条目 (Automatic Translation)
-new-service-access-control-profile=新服务访问控制配置文件 (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=请输入一个独特的服务访问控制配置文件名称。 (Automatic Translation)
-service-access-control-profile-name-is-required=服务访问控制配置文件名称是必需的。 (Automatic Translation)
-service-access-control-profile-title-is-required=服务访问控制配置文件标题是必需的。 (Automatic Translation)
-there-are-no-service-access-control-profiles=没有服务的访问控制配置文件。 (Automatic Translation)
+allowed-service-signatures-help=请输入一个新行分隔每个允许的服务签名。为 example:
+com.liferay.portal.service.UserService
+com.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
+javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.control.profile.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=此字段必需且必须只包含以下字符： 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
