LPS-56580 Regenerate language properties

--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_sk.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_sk.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Pridať profil kontroly prístupu služby (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Povolená služba podpisy (Automatic Translation)
-allowed-service-signatures-help=Zadajte každú podpisy povolenej služby oddelené nový riadok. Pre example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Profil kontroly prístupu služby (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Profil kontroly prístupu služby (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Služba profil vedľa položky riadenia prístupu (Automatic Translation)
-new-service-access-control-profile=Nový profil služby prístup kontroly (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Zadajte názov profilu kontroly prístupu unikátnu službu. (Automatic Translation)
-service-access-control-profile-name-is-required=Názov profilu služby prístup kontroly je potrebné. (Automatic Translation)
-service-access-control-profile-title-is-required=Služba prístup kontroly profil názov je povinný údaj. (Automatic Translation)
-there-are-no-service-access-control-profiles=Neexistujú žiadne služby prístupu ovládanie profilov. (Automatic Translation)
+allowed-service-signatures-help=Zadajte každú podpisy povolenej služby oddelené nový riadok. Pre example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Toto pole je povinné a musí obsahovať len nasledovné znaky: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
