--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_bg.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_bg.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Добавяне на услуга профил за контрол на достъп (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Позволено услуга подписи (Automatic Translation)
-allowed-service-signatures-help=Въведете всеки разрешен услуга подписи, разделени с нов ред. За example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Услуги профил за контрол на достъп (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Услуги профил за контрол на достъп (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Записът на профил за управление на достъпа на услугата (Automatic Translation)
-new-service-access-control-profile=Новата услуга достъп контрол профил (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Въведете име на профил за контрол на уникална услуга достъп. (Automatic Translation)
-service-access-control-profile-name-is-required=Услугата достъп контрол профил името е задължително. (Automatic Translation)
-service-access-control-profile-title-is-required=Изисква се профил заглавие на услугата достъп до контрол. (Automatic Translation)
-there-are-no-service-access-control-profiles=Има профили за контрол на достъп не услуги. (Automatic Translation)
+allowed-service-signatures-help=Въведете всеки разрешен услуга подписи, разделени с нов ред. За example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Това поле е задължително и трябва да съдържа само следните знаци: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
