--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_de.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_de.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Service-Access-Control-Profil hinzufügen (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Service-Signaturen erlaubt (Automatic Translation)
-allowed-service-signatures-help=Geben Sie jede zulässige Service-Signaturen, die durch einen Zeilenumbruch getrennt. Für example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Service-Access-Control-Profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Service-Access-Control-Profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Service Profil Zugriffssteuerungseintrag (Automatic Translation)
-new-service-access-control-profile=Neue Service-Access-Control-Profil (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Bitte geben Sie einen einzigartigen Service Zugriff Steuerelement Profilnamen ein. (Automatic Translation)
-service-access-control-profile-name-is-required=Service Zugriff Steuerelement Profilname ist erforderlich. (Automatic Translation)
-service-access-control-profile-title-is-required=Service Zugriff Steuerelement Profil Titel ist erforderlich. (Automatic Translation)
-there-are-no-service-access-control-profiles=Es gibt keine Dienstprofile Zugriff Steuerelement. (Automatic Translation)
+allowed-service-signatures-help=Geben Sie jede zulässige Service-Signaturen, die durch einen Zeilenumbruch getrennt. Für example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Dieses Feld ist erforderlich und darf nur die folgenden Zeichen enthalten: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
