--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_es.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_es.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Añadir Perfil de Control de acceso de servicio (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Permitió a las firmas de servicio (Automatic Translation)
-allowed-service-signatures-help=Introduzca cada firmas de servicio permitida separados por una línea nueva. Por example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Perfil de Control de acceso de servicio (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Perfil de Control de acceso de servicio (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Entrada de perfil de Control de acceso de servicio (Automatic Translation)
-new-service-access-control-profile=Nuevo perfil de Control de acceso de servicio (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Por favor, introduzca un nombre de perfil de servicio único acceso control. (Automatic Translation)
-service-access-control-profile-name-is-required=Nombre de perfil de control de acceso de servicio se requiere. (Automatic Translation)
-service-access-control-profile-title-is-required=Se requiere título de perfil de control de acceso de servicio. (Automatic Translation)
-there-are-no-service-access-control-profiles=Hay no hay perfiles de control de acceso de servicio. (Automatic Translation)
+allowed-service-signatures-help=Introduzca cada firmas de servicio permitida separados por una línea nueva. Por example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Este campo es necesario y sólo debe contener los siguientes caracteres: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
