--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_fa.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_fa.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=اضافه کردن پروفایل کنترل دسترسی به خدمات (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=خدمات امضاهای مجاز (Automatic Translation)
-allowed-service-signatures-help=هر امضا مجاز سرویس جدا شده توسط خط جدید را وارد کنید. برای example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=پروفایل کنترل دسترسی به خدمات (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=پروفایل کنترل دسترسی به خدمات (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=سرویس دسترسی کنترل مشخصات ورود (Automatic Translation)
-new-service-access-control-profile=نمایه کنترل دسترسی سرویس جدید (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=لطفا با خدمات منحصر به فرد کنترل دسترسی نام نمایه. (Automatic Translation)
-service-access-control-profile-name-is-required=نام نمایه سرویس دسترسی کنترل مورد نیاز است. (Automatic Translation)
-service-access-control-profile-title-is-required=سرویس دسترسی کنترل مشخصات مورد نیاز است. (Automatic Translation)
-there-are-no-service-access-control-profiles=هیچ نمایه کنترل دسترسی به خدمات وجود دارد. (Automatic Translation)
+allowed-service-signatures-help=هر امضا مجاز سرویس جدا شده توسط خط جدید را وارد کنید. برای example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=این زمینه مورد نیاز است و باید تنها شامل کاراکترهای زیر باشد: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
