--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_fi.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_fi.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Lisää palvelu Access Control-profiili (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Internet Service allekirjoitukset (Automatic Translation)
-allowed-service-signatures-help=Kirjoita kunkin sallittu palvelu allekirjoitukset erottaa uuden linjan. Ja example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Palvelun Access Control-profiili (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Palvelun Access Control-profiili (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Palvelun käyttöoikeusmerkinnän profiili (Automatic Translation)
-new-service-access-control-profile=Uusi palvelu Access Control-profiili (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Kirjoita ainutlaatuista palvelua access control Profiilinimi. (Automatic Translation)
-service-access-control-profile-name-is-required=Palvelun access control Profiilinimi on pakollinen. (Automatic Translation)
-service-access-control-profile-title-is-required=Palvelun access control profiilin nimi on pakollinen. (Automatic Translation)
-there-are-no-service-access-control-profiles=Eivät ole palveluprofiilien access control. (Automatic Translation)
+allowed-service-signatures-help=Kirjoita kunkin sallittu palvelu allekirjoitukset erottaa uuden linjan. Ja example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Tämä kenttä on pakollinen ja saa sisältää seuraavia merkkejä: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
