--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_hi_IN.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_hi_IN.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=सेवा अभिगम नियंत्रण प्रोफ़ाइल में जोड़ें (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=सेवा हस्ताक्षरों की अनुमति दी (Automatic Translation)
-allowed-service-signatures-help=प्रत्येक अनुमति प्राप्त सेवा एक नई लाइन से अलग हस्ताक्षर दर्ज करें। Example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* के लिए (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=सेवा अभिगम नियंत्रण प्रोफ़ाइल (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=सेवा अभिगम नियंत्रण प्रोफ़ाइल (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=सेवा अभिगम नियंत्रण प्रोफ़ाइल प्रविष्टि (Automatic Translation)
-new-service-access-control-profile=नई सेवा पहुँच नियंत्रण प्रोफ़ाइल (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=कृपया एक अद्वितीय सेवा पहुँच नियंत्रण प्रोफ़ाइल नाम दर्ज करें। (Automatic Translation)
-service-access-control-profile-name-is-required=सेवा अभिगम नियंत्रण प्रोफ़ाइल नाम की आवश्यकता है। (Automatic Translation)
-service-access-control-profile-title-is-required=सेवा अभिगम नियंत्रण प्रोफ़ाइल शीर्षक की आवश्यकता है। (Automatic Translation)
-there-are-no-service-access-control-profiles=वहाँ कोई सेवा तक पहुँच नियंत्रण प्रोफाइल कर रहे हैं। (Automatic Translation)
+allowed-service-signatures-help=प्रत्येक अनुमति प्राप्त सेवा एक नई लाइन से अलग हस्ताक्षर दर्ज करें। Example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=इस फ़ील्ड की आवश्यकता है और केवल निम्न वर्ण होने चाहिए: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
