--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_hu.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_hu.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Szolgáltatás hozzáférési irányít profil hozzáadása (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Szabad szolgáltatás aláírás (Automatic Translation)
-allowed-service-signatures-help=Adja meg mindegyik engedélyezett szolgáltatás aláírás egy új vonal választja el. A example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Szolgáltatás hozzáférési irányít profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Szolgáltatás hozzáférési irányít profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Szolgáltatás hozzáférési profil szabály (Automatic Translation)
-new-service-access-control-profile=Új szolgáltatásprofil hozzáférési irányít (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Kérjük, írja be a egyedi hozzáférési irányít szolgáltatásprofil neve. (Automatic Translation)
-service-access-control-profile-name-is-required=Hozzáférési irányít szolgáltatásprofil neve szükség. (Automatic Translation)
-service-access-control-profile-title-is-required=Szolgáltatás hozzáférési irányít dokumentumprofil címe szükség. (Automatic Translation)
-there-are-no-service-access-control-profiles=Vannak nem szolgáltatásprofilok hozzáférési irányít. (Automatic Translation)
+allowed-service-signatures-help=Adja meg mindegyik engedélyezett szolgáltatás aláírás egy új vonal választja el. A example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Ez a mező kötelező, és csak tartalmaznia kell a következő karakterek: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
