--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_it.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_it.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Aggiungere il profilo del controllo di accesso servizio (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Ammessi servizio firme (Automatic Translation)
-allowed-service-signatures-help=Immettere ogni firme servizio consentite separate da una linea nuova. Per example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Profilo di controllo di accesso servizio (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Profilo di controllo di accesso servizio (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Profilo voce di controllo di accesso servizio (Automatic Translation)
-new-service-access-control-profile=Nuovo profilo di controllo accesso di servizio (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Inserisci un nome di profilo del controllo accesso servizio unico. (Automatic Translation)
-service-access-control-profile-name-is-required=Nome del profilo del servizio accesso controllo è obbligatorio. (Automatic Translation)
-service-access-control-profile-title-is-required=Servizio accesso controllo profilo titolo è richiesto. (Automatic Translation)
-there-are-no-service-access-control-profiles=Non ci sono nessun profili di controllo accesso di servizio. (Automatic Translation)
+allowed-service-signatures-help=Immettere ogni firme servizio consentite separate da una linea nuova. Per example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Questo campo è obbligatorio e deve contenere solo i seguenti caratteri: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
