--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ja.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ja.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=サービス アクセス制御プロフィールを追加します。 (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=サービスの署名を許可 (Automatic Translation)
-allowed-service-signatures-help=新しい行で区切られた各許可サービス署名を入力します。Example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* の (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=サービス アクセス制御プロフィール (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=サービス アクセス制御プロフィール (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=サービス アクセス制御プロファイル エントリ (Automatic Translation)
-new-service-access-control-profile=新しいサービスのアクセス制御プロフィール (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=一意のサービスのアクセス制御プロファイル名を入力してください。 (Automatic Translation)
-service-access-control-profile-name-is-required=サービス アクセス制御プロファイル名が必要です。 (Automatic Translation)
-service-access-control-profile-title-is-required=サービスのアクセス制御プロフィール タイトルが必要です。 (Automatic Translation)
-there-are-no-service-access-control-profiles=サービスのアクセス制御プロフィールはありません。 (Automatic Translation)
+allowed-service-signatures-help=新しい行で区切られた各許可サービス署名を入力します。Example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=このフィールドが必要ですし、のみ、次の文字を含める必要があります: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
