--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ko.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ko.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=서비스 액세스 제어 프로필 추가 (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=서비스 서명을 허용 (Automatic Translation)
-allowed-service-signatures-help=새로운 라인으로 구분 된 각 허용된 서비스 서명을 입력 합니다. Example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get*에 대 한 (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=서비스 액세스 제어 프로 파일 (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=서비스 액세스 제어 프로 파일 (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=서비스 액세스 제어 프로필 항목 (Automatic Translation)
-new-service-access-control-profile=새로운 서비스 액세스 제어 프로 파일 (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=독특한 서비스 액세스 제어 프로필 이름을 입력 하십시오. (Automatic Translation)
-service-access-control-profile-name-is-required=서비스 액세스 제어 프로필 이름이 필요 합니다. (Automatic Translation)
-service-access-control-profile-title-is-required=서비스 액세스 제어 프로필 제목이 필요 합니다. (Automatic Translation)
-there-are-no-service-access-control-profiles=서비스 액세스 제어 프로 파일을 확인 하 고 있습니다. (Automatic Translation)
+allowed-service-signatures-help=새로운 라인으로 구분 된 각 허용된 서비스 서명을 입력 합니다. Example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=이 필드는 필수 이며 다음 문자를 포함 해야 합니다: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
