--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_nb.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_nb.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Legge til Access Control tjenesteprofilen (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Tillatt Service signaturer (Automatic Translation)
-allowed-service-signatures-help=Angi hver tillatte tjenesten signaturer med en ny linje. For example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Access Control tjenesteprofilen (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Access Control tjenesteprofilen (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Tjenesten profil tilgangskontrolloppføring (Automatic Translation)
-new-service-access-control-profile=Ny Service Access Control profil (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Angi en unik service access control profilnavn. (Automatic Translation)
-service-access-control-profile-name-is-required=Service access control profilnavnet er nødvendig. (Automatic Translation)
-service-access-control-profile-title-is-required=Service tittel access control profil (Automatic Translation)
-there-are-no-service-access-control-profiles=Det er ingen service access control profiler. (Automatic Translation)
+allowed-service-signatures-help=Angi hver tillatte tjenesten signaturer med en ny linje. For example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Dette feltet er obligatorisk og må bare inneholde følgende tegn: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
