--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_nl.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_nl.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Service Access Control profiel toevoegen (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Service handtekeningen toegestaan (Automatic Translation)
-allowed-service-signatures-help=Voer elke toegestane dienst handtekeningen gescheiden door een nieuwe regel. Voor example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Access Control serviceprofiel (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Access Control serviceprofiel (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Service profiel toegangsbeheervermelding (Automatic Translation)
-new-service-access-control-profile=Nieuwe serviceprofiel Access Control (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Voer de naam van een unieke service toegang besturingselement profiel. (Automatic Translation)
-service-access-control-profile-name-is-required=Service toegang controle profielnaam is vereist. (Automatic Translation)
-service-access-control-profile-title-is-required=Service toegang controle profiel titel is vereist. (Automatic Translation)
-there-are-no-service-access-control-profiles=Er zijn geen serviceprofielen toegang controle. (Automatic Translation)
+allowed-service-signatures-help=Voer elke toegestane dienst handtekeningen gescheiden door een nieuwe regel. Voor example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Dit veld is vereist en mag alleen de volgende tekens bevatten: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
