--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ro.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ro.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Adauga serviciul de acces Control profil (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Permis serviciu semnături (Automatic Translation)
-allowed-service-signatures-help=Introduceţi fiecare semnături de permise imagini separate printr-o nouă linie. Pentru example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Serviciul de acces Control profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Serviciul de acces Control profil (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Intrare service acces Control profil (Automatic Translation)
-new-service-access-control-profile=Nou serviciu de acces Control profil (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Vă rugăm să introduceţi un nume de control de acces de serviciu unic de profil. (Automatic Translation)
-service-access-control-profile-name-is-required=Nume profil servicii acces control este necesar. (Automatic Translation)
-service-access-control-profile-title-is-required=Serviciul de acces control profil titlu este necesar. (Automatic Translation)
-there-are-no-service-access-control-profiles=Nu există nici un serviciu de acces controlul profiluri. (Automatic Translation)
+allowed-service-signatures-help=Introduceţi fiecare semnături de permise imagini separate printr-o nouă linie. Pentru example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Acest câmp este necesară şi trebuie să conţină numai următoarele caractere: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
