--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ru.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_ru.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Добавление профиля управления службы доступа (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Допускается службы подписей (Automatic Translation)
-allowed-service-signatures-help=Введите подписи каждого разрешенных номеров, разделенных новой линии. Для example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Профиль контроля доступа службы (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Профиль контроля доступа службы (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Служба контроля профиля доступа (Automatic Translation)
-new-service-access-control-profile=Новый профиль контроля доступа службы (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Пожалуйста, введите имя профиля управления доступа уникальный сервис. (Automatic Translation)
-service-access-control-profile-name-is-required=Имя профиля службы доступа контроля не требуется. (Automatic Translation)
-service-access-control-profile-title-is-required=Название профиля управления услуги доступа не требуется. (Automatic Translation)
-there-are-no-service-access-control-profiles=Существует нет профилей управления службы доступа. (Automatic Translation)
+allowed-service-signatures-help=Введите подписи каждого разрешенных номеров, разделенных новой линии. Для example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Это поле является обязательным и должен содержать только следующие символы: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
