--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_sl.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_sl.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Dodajte kontrolnik profil storitve dostop (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Dovoljeno storitev podpisov (Automatic Translation)
-allowed-service-signatures-help=Vnesite vsako dovoljeno storitev podpisov, ločena z novo vrstico. Za example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Profil storitve dostop nadzora (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Profil storitve dostop nadzora (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Vnos profil nadzora dostopa za storitev (Automatic Translation)
-new-service-access-control-profile=Nov profil storitve dostop nadzora (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Vnesite edinstveno storitev access control ime profila. (Automatic Translation)
-service-access-control-profile-name-is-required=Storitev access control ime profila je potrebna. (Automatic Translation)
-service-access-control-profile-title-is-required=Storitev access control profil naslov je potrebno. (Automatic Translation)
-there-are-no-service-access-control-profiles=Obstaja nobena storitev dostop nadzora profilov. (Automatic Translation)
+allowed-service-signatures-help=Vnesite vsako dovoljeno storitev podpisov, ločena z novo vrstico. Za example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=V polju je zahtevano in mora vsebovati samo naslednje znake: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
