--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_tr.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_tr.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Hizmet erişim denetim profili ekleme (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Hizmet imzalar izin (Automatic Translation)
-allowed-service-signatures-help=Yeni bir çizgi ile ayrılmış her izin verilen hizmet imzalar girin. Example:\ncom.Liferay.Portal.Service.UserService\ncom.Liferay.portlet.DocumentLibrary.DLAppService#Get* için (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Hizmet erişim denetim profili (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Hizmet erişim denetim profili (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Hizmet erişim denetim profil girdisi (Automatic Translation)
-new-service-access-control-profile=Yeni hizmet erişim denetim profili (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Lütfen benzersiz bir hizmet erişim denetim profil adı girin. (Automatic Translation)
-service-access-control-profile-name-is-required=Hizmet erişim denetim profil adı gereklidir. (Automatic Translation)
-service-access-control-profile-title-is-required=Hizmet erişim denetim profil adı gereklidir. (Automatic Translation)
-there-are-no-service-access-control-profiles=Hiçbir hizmet erişim denetim profilleri vardır. (Automatic Translation)
+allowed-service-signatures-help=Yeni bir çizgi ile ayrılmış her izin verilen hizmet imzalar girin. Example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Bu alan gereklidir ve yalnızca aşağıdaki karakterleri içermelidir: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
