--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_uk.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_uk.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Додати профіль контролю доступу до служби (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Допускається служби підписів (Automatic Translation)
-allowed-service-signatures-help=Введіть кожен дозволених служби підписів, розділених новий рядок. Для example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Профіль контролю доступу до служби (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Профіль контролю доступу до служби (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Служба запису профіль керування доступом (Automatic Translation)
-new-service-access-control-profile=Нові профіль контролю доступу служби (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Будь ласка, введіть унікальну послугу доступу до елемента керування ім'я профілю. (Automatic Translation)
-service-access-control-profile-name-is-required=Служби доступу елемента керування ім'я профілю не потрібно. (Automatic Translation)
-service-access-control-profile-title-is-required=Служби доступу контролю профілю заголовок не потрібно. (Automatic Translation)
-there-are-no-service-access-control-profiles=Там не немає служби access керування режимами. (Automatic Translation)
+allowed-service-signatures-help=Введіть кожен дозволених служби підписів, розділених новий рядок. Для example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Це поле є обов'язковим і має містити лише такі символи: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
