--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_vi.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_vi.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=Thêm dịch vụ truy cập kiểm soát hồ sơ (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=Cho phép Dịch vụ chữ ký (Automatic Translation)
-allowed-service-signatures-help=Nhập mỗi chữ ký được cho phép Dịch vụ tách ra bởi một dòng mới. Cho example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=Dịch vụ truy cập kiểm soát hồ sơ (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=Dịch vụ truy cập kiểm soát hồ sơ (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=Dịch vụ truy cập kiểm soát hồ sơ nhập (Automatic Translation)
-new-service-access-control-profile=Hồ sơ kiểm soát truy cập Dịch vụ mới (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=Xin vui lòng nhập tên hồ sơ kiểm soát truy cập Dịch vụ duy nhất. (Automatic Translation)
-service-access-control-profile-name-is-required=Dịch vụ truy cập kiểm soát tên hồ sơ được yêu cầu. (Automatic Translation)
-service-access-control-profile-title-is-required=Tiêu đề hồ sơ dịch vụ truy cập kiểm soát là cần thiết. (Automatic Translation)
-there-are-no-service-access-control-profiles=Không có không có cấu hình dịch vụ kiểm soát truy cập. (Automatic Translation)
+allowed-service-signatures-help=Nhập mỗi chữ ký được cho phép Dịch vụ tách ra bởi một dòng mới. Cho example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=Lĩnh vực này là cần thiết và chỉ phải chứa các ký tự sau: 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
