--- a/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_zh_TW.properties
+++ b/modules/apps/service-access-policy/service-access-policy-web/src/content/Language_zh_TW.properties
@@ -1,12 +1,12 @@
-action.ADD_SACP_ENTRY=添加服務存取控制設定檔 (Automatic Translation)
+action.ADD_SERVICE_ACCESS_POLICY=Add Service Access Policy (Automatic Copy)
 allowed-service-signatures=允許服務簽名 (Automatic Translation)
-allowed-service-signatures-help=請輸入一個新行分隔每個允許的服務簽名。為 example:\ncom.liferay.portal.service.UserService\ncom.liferay.portlet.documentlibrary.DLAppService#get* (Automatic Translation)
-javax.portlet.title.com_liferay_service_access_control_profile_web_portlet_SACPPortlet=服務存取控制設定檔 (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile=服務存取控制設定檔 (Automatic Translation)
-model.resource.com.liferay.service.access.control.profile.model.SACPEntry=服務存取控制設定檔條目 (Automatic Translation)
-new-service-access-control-profile=新服務存取控制設定檔 (Automatic Translation)
-please-enter-a-unique-service-access-control-profile-name=請輸入一個獨特的服務存取控制設定檔名稱。 (Automatic Translation)
-service-access-control-profile-name-is-required=服務存取控制設定檔名稱是必需的。 (Automatic Translation)
-service-access-control-profile-title-is-required=服務存取控制設定檔標題是必需的。 (Automatic Translation)
-there-are-no-service-access-control-profiles=沒有服務的存取控制設定檔。 (Automatic Translation)
+allowed-service-signatures-help=請輸入一個新行分隔每個允許的服務簽名。為 example:
+javax.portlet.title.com_liferay_service_access_policy_web_portlet_ServiceAccessPolicyPortlet=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy=Service Access Policy (Automatic Copy)
+model.resource.com.liferay.service.access.policy.model.ServiceAccessPolicy=Service Access Policy (Automatic Copy)
+new-service-access-policy=New Service Access Policy (Automatic Copy)
+please-enter-a-unique-service-access-policy-name=Please enter a unique service access policy name. (Automatic Copy)
+service-access-policy-name-is-required=Service access policy name is required. (Automatic Copy)
+service-access-policy-title-is-required=Service access policy title is required. (Automatic Copy)
+there-are-no-service-access-policies=There are no service access policies. (Automatic Copy)
 this-field-is-required-and-must-contain-only-following-characters=此欄位必需且必須只包含以下字元： 0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz#:@./_- (Automatic Translation)
